# IR2117

HelloWorld/: hello  hello.cc
Sum/: sum  sum.cc  sum_ab  sum_ab.cc
math_problem/: mean_test  mean_test.cc
quadratic_equation/: quadratic  quadratic.cc
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/examples/lib/examples/: publisher  subscriber
ros2_ws/install/examples/share/examples/: package.sh  package.xml
ros2_ws/install/sum/share/sum/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/sum/share/sum/cmake/: sumConfig.cmake
ros2_ws/log/: latest_build
ros2_ws/src/action_tutorials_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/action_tutorials_cpp/src/: action_client.cpp  action_server.cpp
ros2_ws/src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/examples/: CMakeLists.txt  package.xml
ros2_ws/src/examples/src/: publisher.cpp  subscriber.cpp
ros2_ws/src/median/: CMakeLists.txt  package.xml
ros2_ws/src/median/src/: mediana.cc
ros2_ws/src/mode/: CMakeLists.txt  package.xml
ros2_ws/src/mode/src/: mode.cc
ros2_ws/src/stats/src/: mean.cc
ros2_ws/src/sum/: CMakeLists.txt  package.xml
ros2_ws/src/sum/src/: sum.cpp
ros2_ws/src/triangles/: CMakeLists.txt
ros2_ws/src/triangles/launch/: equilateral.launch.py  isosceles.launch.py
ros2_ws/src/triangles/src/: equilateral.cpp  escaleno.cpp  isosceles.cpp
tb3_ws/install/: setup.sh
tb3_ws/install/obstacles/lib/obstacles/: detector
tb3_ws/install/obstacles/share/obstacles/: package.xml
tb3_ws/install/obstacles/share/obstacles/launch/: detector_test.launch.py
tb3_ws/install/robot_trayectory/lib/robot_trayectory/: square  square_odom  wandering
tb3_ws/install/robot_trayectory/share/robot_trayectory/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
tb3_ws/install/robot_trayectory/share/robot_trayectory/cmake/: robot_trayectoryConfig.cmake
tb3_ws/install/robot_trayectory/share/robot_trayectory/launch/: square.launch.py
tb3_ws/log/: latest_build
tb3_ws/src/obstacles/: CMakeLists.txt
tb3_ws/src/obstacles/launch/: triple_detector.launch.py
tb3_ws/src/obstacles/src/: avoidance.cpp  detector.cpp  subscriber.cpp
tb3_ws/src/olympic/: CMakeLists.txt
tb3_ws/src/olympic/src/: european.cpp  rings.cpp
tb3_ws/src/robot_trayectory/: CMakeLists.txt  package.xml
tb3_ws/src/robot_trayectory/src/: square.cpp  square_odom.cpp  wandering.cpp
